2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Added some more error checks.

	* tools/wfut.cpp: Updated some formatting and comments.

2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tools/wfut.cpp: Added simple usage information.

2007-02-19  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/platform.cpp: Check %TMP%, %TEMP% then "." as possible tmp
	  file locations. Delete Win32 temp files on close.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tools/wfut.cpp: Fix compiler warning.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* man/man1/wfut.1, configure.ac, Makefile.am, man/Makefile.am,
	  man/man1/Makefile.am: Added initial man page for wfut.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Encoder.cpp, libwfut/Encoder.h: Renamed encode/decode to
	  encodeString and decodeString. Added an encodeURL method to encode
	  strings for suitable use as a URL.

	* libwfut/FileParser.cpp, libwfut/FileWriter.cpp, libwfut/IO.cpp,
	  tools/wfut.cpp: Updated calls to encode/decode. Make sure urls are
	  properly encoded before storing/using them.

2007-02-16  Kai Blin  <kai.blin@gmail.com>
	* configure.ac: Fix installing the wfut binary.

	* libwfut/FileWriter.cpp, libwfut/FileParser.cpp, 
	  libwfut/ChannelWriter.cpp, libwfut/ChannelParser.cpp: Fix tinyxml
	  include now that tinyxml is in the main source.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Removed tinyxml Makefile from generated files list.

2007-02-13  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am, libwfut/platform.cpp, libwfut/platform.h,
	  libwfut/IO.cpp, libwfut/WFUT.cpp: Created a platform class with
	  platform specific code. Currently provides a wrapper for mkdir and a
	  fake tmpfile implementation for win32 as the default one only works 
	  for administrator accounts.

	* configure.ac: Remove -ansi as this stops some win32 functions being
	  defined.
